# libsql-client-py

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml  pages.yaml
docs/: conf.py  dbapi2.rst  index.rst  reference.rst
examples/: books.py  dbapi2.py  readme.py
libsql_client/: __init__.py  client.py  config.py  create_client.py  http.py  result.py  sqlite3.py  sqlite3_utils.py  sync.py
libsql_client/dbapi2/: __init__.py  __main__.py  _async_executor.py  _reexports.py  _utils.py  client.py  create_client.py  hrana.py  result.py  sqlite3.py  sync.py  types.py
libsql_client/dbapi2/_replace_modules_pythonpath/sqlite3/: __init__.py  dbapi2.py
libsql_client/dbapi2/hrana/: convert.py
libsql_client/dbapi2/tests/: conftest.py  test_batch.py  test_create_client.py  test_result.py  test_values.py
libsql_client/hrana/: __init__.py  client.py  conn.py  convert.py  id_alloc.py  proto.py
scripts/: run-examples.sh  run-tests.sh
tests/: conftest.py  test_args.py  test_batch.py  test_create_client.py  test_execute.py  test_network_errors.py  test_result.py  test_sync.py  test_transaction.py  test_values.py
tests/dbapi2/: README.md  libsql_client_helpers.py  test_backup.py  test_dbapi.py  test_dump.py  test_factory.py  test_hooks.py  test_regression.py  test_transactions.py  test_types.py  test_userfunctions.py
