[tool.poetry]
name = "libsql-client"
version = "0.3.1-pre"
authors = [
    "Gustavo Barbieri <barbieri@gmail.com>",
    "Jan Špaček <honza@chiselstrike.com>",
    "ChiselStrike",
]
description = "Python SDK for libSQL"
homepage = "https://github.com/libsql/libsql-client-py"
repository = "https://github.com/libsql/libsql-client-py"
documentation = "https://libsql.org/libsql-client-py/"
readme = "README.md"
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.0"
typing-extensions = "^4.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pytest-asyncio = "^0.20.3"
mypy = "^1.2"
requests = "^2.28.2"

[tool.poetry.group.pandas]
optional = true
[tool.poetry.group.pandas.dependencies]
pandas = "^1.0"

[tool.mypy]
packages = ["libsql_client"]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 88
target-version = ['py37']
# tests/dbapi2 are copies from cpython-3.11.3, do not touch
force-exclude = "(tests/dbapi2|hrana-test-server)/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
