[tool.poetry]
name = "libsql-client"
version = "0.3.1-pre"
authors = [
    "Gustavo Barbieri <barbieri@gmail.com>",
    "Jan Špaček <honza@chiselstrike.com>",
    "ChiselStrike",
]
description = "Python SDK for libSQL"
homepage = "https://github.com/libsql/libsql-client-py"
repository = "https://github.com/libsql/libsql-client-py"
documentation = "https://libsql.org/libsql-client-py/"
readme = "README.md"
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.0"
typing-extensions = "^4.5"
sphinx-press-theme = "^0.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pytest-asyncio = "^0.20.3"
mypy = "^1.2"
requests = "^2.28.2"

[tool.poetry.group.pandas]
optional = true
[tool.poetry.group.pandas.dependencies]
pandas = "^1.0"

[tool.mypy]
packages = ["libsql_client"]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 88
target-version = ['py37']
# tests/dbapi2 are copies from cpython-3.11.3, do not touch
force-exclude = "(tests/dbapi2|hrana-test-server)/"

# disable isort, for IDEs that just default isort to be turned on, e.g. vscode.
# we use flake8-import-order for import sorting, using zimports to actually
# reformat code.  isort is nicer in many ways but doesn't have our
# "import *" fixer and also is not 100% compatible with flake8-import-order.
[tool.isort]
skip_glob=['*']

[tool.zimports]
black-line-length = 88
keep-unused-type-checking = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
